snapshot-tests/tests/snapshots/annotate_snippets__newline_string.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: invalid basic string, expected `"`
 --> newline_string:1:6
  |
1 | a = "
  |      ^ expected `"`
